# produse_Qt

./: CMakeLists.txt  main.cpp
headers/: GUI.h  Observable.h  Observer.h  TableModel.h  produs.h  repo.h  service.h  tester.h
sources/: GUI.cpp  produs.cpp  repo.cpp  service.cpp  tester.cpp
